Fix text margins on small-width deviecs

--- a/public/stylesheets/landing.css
+++ b/public/stylesheets/landing.css
@@ -1109,3 +1109,9 @@ section.dark span.mdi {
     width: 25%;
   } 
 }
+
+@media(max-width: 400px) {
+  #about > div > div {
+    margin-left: 80px;
+  }
+}
